--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@ baseURL = "https://lucasfelz.github.io/"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "Lucas Felz"
-theme = "blowfish"
+
 
 enableRobotsTXT = true
 
@@ -15,4 +15,8 @@ enableRobotsTXT = true
       description = "Cybersecurity Portfolio | Infrastructure"
       rtl = false
       dateformat = "2006-01-02"
+
+[module]
+  [[module.imports]]
+    path = "github.com/nunocoracao/blowfish"
 
